0.5.0 - Released with KDE 4.3.0
------------------------------------------------------------------------
- Updated to LibRaw 0.7.0-beta5. 
  See http://www.libraw.org/download#changelog-beta for details.

0.4.0 - Released with KDE 4.2.0
------------------------------------------------------------------------
- Updated to LibRaw 0.6.5 : Fixed file descriptor and buffer memory leak when thumbnail extractor is called, 
                            but library object is not properly initialized.
                            Fixes in Imacon files unpacking.
                            Fixes in Hasselblad .fff files unpacking.
- Updated to LibRaw 0.6.3 : NEF processing code changed (some overflow control added).
- Updated to LibRaw 0.6.2.
- New cameras: Canon G10 & 5D Mk2, Leaf AFi 7, Leica D-LUX4,              
               Panasonic FX150 & G 1, Fujifilm IS Pro.
- Updated to LibRaw 0.6.1.
- New cameras: Canon 50D, Sony A900, Nikon D90 & P6000, Panasonic LX3 FZ28.
- Ported to LibRaw Api 0.6.0. Removed dcraw.c and DcrawBinary class.
- Use kDebug(51002) instead qDebug().

0.3.0 - Released with KDE 4.1.2
------------------------------------------------------------------------
- Sync with KDE3 branch 0.1.5 API changes.

0.2.0 - Released with KDE 4.1.0
------------------------------------------------------------------------
- Port to CMake/KDE4/QT4
- Moved from extragear/libs to kdegraphics/libs

0.1.5
------------------------------------------------------------------------

- API changed: add white point settings support (dcraw -S option)

- Updated dcraw to 8.86
  New camera : Sony A300.
  Fixed camera WB on the A200.
  Set model-specific saturation levels in adobe_coeff().
  No new options introduced.
- Updated dcraw to 8.85
  New camera : Olympus E-420.
  No new options introduced.
- Updated dcraw to 8.84
  New cameras: Canon EOS 450D, Nikon D60, and Fuji S100FS.
  Copied new matrices from Adobe DNG Converter 4.4.
  sRAW support in 1.393 broke Fuji DNG files, now fixed.