@@ -1,6 +1,6 @@
 /* 
    GENERATED FILE, DO NOT EDIT
-   Generated from dcraw/dcraw.c at Fri Mar 13 22:27:06 2009
+   Generated from dcraw/dcraw.c at Sun Mar 15 13:33:55 2009
    Look into original file (probably http://cybercom.net/~dcoffin/dcraw/dcraw.c)
    for copyright information.
 */
@@ -1233,6 +1233,7 @@ void CLASS fuji_load_raw()
   free (pixel);
 #else
   int row,col;
+  int wide, r, c;
   pixel = (ushort *) calloc (raw_width, sizeof *pixel);
   merror (pixel, "fuji_load_raw()");
   for (row=0; row < raw_height; row++) {
@@ -1241,7 +1242,17 @@ void CLASS fuji_load_raw()
         if(col >= left_margin && col < width+left_margin
            && row >= top_margin && row < height+top_margin)
             {
-                BAYER(row-top_margin,col-left_margin) = pixel[col];
+                int rrow = row-top_margin;
+                int ccol = col-left_margin;
+                if (fuji_layout) {
+                    r = fuji_width - 1 - ccol + (rrow >> 1);
+                    c = ccol + ((rrow+1) >> 1);
+                } else {
+                    r = fuji_width - 1 + rrow - (ccol >> 1);
+                    c = rrow + ((ccol+1) >> 1);
+                }
+
+                image[((row-top_margin) >> shrink)*iwidth + ((col-left_margin) >> shrink)][FC(r,c)] = pixel[col];
             }
         else
             {
@@ -1253,7 +1264,7 @@ void CLASS fuji_load_raw()
   free (pixel);
 #endif
 }
-#line 1545 "dcraw/dcraw.c"
+#line 1556 "dcraw/dcraw.c"
 void CLASS ppm_thumb (FILE *tfp)
 {
   char *thumb;
@@ -1751,7 +1762,7 @@ void CLASS leaf_hdr_load_raw()
   }
 }
 
-#line 2046 "dcraw/dcraw.c"
+#line 2057 "dcraw/dcraw.c"
 void CLASS sinar_4shot_load_raw()
 {
   ushort *pixel;
@@ -2979,7 +2990,7 @@ void CLASS smal_v9_load_raw()
     smal_decode_segment (seg+i, holes);
   if (holes) fill_holes (holes);
 }
-#line 4147 "dcraw/dcraw.c"
+#line 4158 "dcraw/dcraw.c"
 
 void CLASS pseudoinverse (double (*in)[3], double (*out)[3], int size)
 {
@@ -4247,7 +4258,7 @@ void CLASS parse_thumb_note (int base, unsigned toff, unsigned tlen)
   }
 }
 
-#line 5418 "dcraw/dcraw.c"
+#line 5429 "dcraw/dcraw.c"
 void CLASS parse_makernote (int base, int uptag)
 {
   static const uchar xlat[2][256] = {
@@ -4779,7 +4790,7 @@ void CLASS parse_kodak_ifd (int base)
   }
 }
 
-#line 5953 "dcraw/dcraw.c"
+#line 5964 "dcraw/dcraw.c"
 int CLASS parse_tiff_ifd (int base)
 {
   unsigned entries, tag, type, len, plen=16, save;
@@ -5941,7 +5952,7 @@ void CLASS parse_cine()
   data_offset  = (INT64) get4() + 8;
   data_offset += (INT64) get4() << 32;
 }
-#line 7218 "dcraw/dcraw.c"
+#line 7229 "dcraw/dcraw.c"
 #ifdef LIBRAW_LIBRARY_BUILD
 void CLASS adobe_coeff (const char *p_make, const char *p_model)
 #else
@@ -7844,7 +7855,7 @@ notraw:
   RUN_CALLBACK(LIBRAW_PROGRESS_IDENTIFY,1,2);
 #endif
 }
-#line 9212 "dcraw/dcraw.c"
+#line 9223 "dcraw/dcraw.c"
 void CLASS convert_to_rgb()
 {
   int row, col, c, i, j, k;
@@ -8100,7 +8111,7 @@ void CLASS gamma_lut (ushort lut[0x10000])
 }
 
 
-#line 9492 "dcraw/dcraw.c"
+#line 9503 "dcraw/dcraw.c"
 void CLASS tiff_set (ushort *ntag,
 	ushort tag, ushort type, int count, int val)
 {
