@@ -1,5 +1,5 @@
 /* -*- C++ -*-
- * File: version.h
+ * File: libraw_version.h
  * Copyright 2008-2009 Alex Tutubalin <lexa@lexa.ru>
  * Created: Mon Sept  8, 2008 
  *
@@ -27,7 +27,7 @@
 #define LIBRAW_MAJOR_VERSION  0
 #define LIBRAW_MINOR_VERSION  7
 #define LIBRAW_PATCH_VERSION  0
-#define LIBRAW_VERSION_TAIL   Beta5
+#define LIBRAW_VERSION_TAIL   Release
 
 #define _LIBRAW_VERSION_MAKE(a,b,c,d) #a"."#b"."#c"-"#d
 #define LIBRAW_VERSION_MAKE(a,b,c,d) _LIBRAW_VERSION_MAKE(a,b,c,d)
